Use absolute imports for bootstrap

--- a/scss/coreui-standalone.scss
+++ b/scss/coreui-standalone.scss
@@ -10,9 +10,9 @@
 @import "variables";
 
 // Import Bootstrap source files
-@import "bootstrap/scss/functions";
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/mixins";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
 // Import core styles
 @import "mixins";
