--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -10,7 +10,7 @@
 @import "variables";
 
 // Import Bootstrap source files
-@import "bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
 
 // Mixins
 @import "mixins";
